--- a/drugs.html
+++ b/drugs.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+    <!-- HEAD SECTION-->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>SD&éM</title>
         <link rel="icon" href="img/favicon.png">
         <link href="css/nav.min.css" rel="stylesheet">
-        <link href="css/stylesheet.css" rel="stylesheet">
         <link href="css/styles.css" type="text/css" rel="stylesheet">    
-        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
         </head>
     <body>
@@ -41,7 +40,6 @@
                 </div>        
         </section>
         <!--  GRID SECTION -->
-        
         <!-- FOOTER SECTION-->
         <footer>
             <div class="footer">
